# chess-engine

./: CMakeLists.txt  README.md
include/: chess_exceptions.h  move_generator.hpp  utils.h  utils.hpp
src/: move_generator.cpp  move_generator.hpp  notation.cpp  utils.cpp
tests/: TestMoveGenerator.cpp  move_generator_test.cpp  perft.cpp
